# OSINT-Microservice-Starter

./: Readme.MD  main.py  pyproject.toml
app/: main.py
app/api/routes/: analyze.py
app/api/schemas/: analyze.py
app/core/: celery_app.py  config.py
app/services/: logic.py
app/tasks/: analyze.py
