[project]
name = "osint-microservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "celery>=5.5.3",
    "fastapi>=0.121.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "redis>=7.0.1",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
